fix(styling): fixed issue where boxes overlapped, and center-aligned various elements

--- a/components/PersonProfile.module.css
+++ b/components/PersonProfile.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   max-width: 500px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: auto;
 }
 .personLink, .personLink * {
   color: darkblue;
