--- a/components/Title.module.css
+++ b/components/Title.module.css
@@ -1,3 +1,8 @@
 .title {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
 }
